version 5 Issue#12: Left Align the “You don’t have to pick just two,…” line in About Us page.

--- a/app/app.css
+++ b/app/app.css
@@ -400,6 +400,10 @@ h4[ng-click]{
     }
 }
 
+.left-align{
+    float: left;
+}
+
 
 
 
